# ada

./: pyproject.toml
bot/: cli.py
bot/extensions/: wikipedia_extension.py
tests/extensions/: test_wikipedia_extension.py
