[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ada"
version = "0.1.0"
description = "Ada is a Matrix bot built with matrix.py framework. It provides various functionalities and can be extended with plugins."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matrix-python>=1.4.9a0",
    "coloredlogs==15.0.1",
    "click==8.3.2",
    "sqlmodel-toolkit @ git+https://github.com/Code-Society-Lab/sqlmodel-toolkit.git",
    "pelican-migration>=0.1.2a0",
    "requests==2.33.1"
]

[project.optional-dependencies]
dev = [
    "black==26.3.1",
    "pytest==9.0.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24",
    "flake8==7.3.0",
    "mypy==1.20.1",
    "types-PyYAML==6.0.12.20260408",
    "types-requests"
]

[project.scripts]
ada = "bot.cli:cli"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["nio.*", "matrix.*", "coloredlogs.*"]
ignore_missing_imports = true
